TFP-5764: Støtte for å lagre originalkobling i fpkalkulus (#35)
* TFP-5764: Støtte for å lagre originalkobling i fpkalkulus